[tool.poetry]
name = "elb-example"
version = "0.1.0"
description = ""
authors = ["devMuromi <devmuromi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.11"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
